// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StreetActionSelector> matches with the previous snapshot (big blind in preflop) 1`] = `
<styled.div>
  <styled.button
    active={false}
    data-test-id="fold-button"
    onClick={[Function]}
  >
    Fold
  </styled.button>
  <styled.button
    active={false}
    data-test-id="check-or-call-button"
    onClick={[Function]}
  >
    Check
  </styled.button>
  <styled.button
    active={false}
    data-test-id="bet-or-raise-button"
    onClick={[Function]}
    tabIndex={0}
  >
    Raise
    <styled.input
      active={false}
      data-test-id="bet-size-input"
      defaultValue={1}
      max={99999999}
      min={0}
      onChange={[Function]}
      placeholder="1"
      tabIndex={-1}
      type="number"
    />
  </styled.button>
</styled.div>
`;

exports[`<StreetActionSelector> matches with the previous snapshot (someone raised) 1`] = `
<styled.div>
  <styled.button
    active={false}
    data-test-id="fold-button"
    onClick={[Function]}
  >
    Fold
  </styled.button>
  <styled.button
    active={false}
    data-test-id="check-or-call-button"
    onClick={[Function]}
  >
    Call
  </styled.button>
  <styled.button
    active={false}
    data-test-id="bet-or-raise-button"
    onClick={[Function]}
    tabIndex={0}
  >
    Raise
    <styled.input
      active={false}
      data-test-id="bet-size-input"
      defaultValue={22.5}
      max={99999999}
      min={0}
      onChange={[Function]}
      placeholder="22.5"
      tabIndex={-1}
      type="number"
    />
  </styled.button>
</styled.div>
`;

exports[`<StreetActionSelector> matches with the previous snapshot 1`] = `
<styled.div>
  <styled.button
    active={false}
    data-test-id="fold-button"
    onClick={[Function]}
  >
    Fold
  </styled.button>
  <styled.button
    active={false}
    data-test-id="check-or-call-button"
    onClick={[Function]}
  >
    Check
  </styled.button>
  <styled.button
    active={false}
    data-test-id="bet-or-raise-button"
    onClick={[Function]}
    tabIndex={0}
  >
    Bet
    <styled.input
      active={false}
      data-test-id="bet-size-input"
      defaultValue={0}
      max={99999999}
      min={0}
      onChange={[Function]}
      placeholder="0"
      tabIndex={-1}
      type="number"
    />
  </styled.button>
</styled.div>
`;
